<resources>
    <string name="app_name">Photo Blog App</string>
    <string name="pass_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_logo_desc">Login Logo</string>
    <string name="login_btn_text">Login To Account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Log Out</string>
    <string name="reg_btn_text">Create  New Account</string>
    <string name="reg_login_text">Already have an account?</string>
    <string name="reg_pass_text">Password</string>
    <string name="reg_confirm_pass_text">Confirm Password </string>
    <string name="setup_name_hint">Your Name</string>
    <string name="setuo_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint"> Add Description</string>
    <string name="new_post_button_hint">post Blog</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name1">Login Screen</string>
    <string name="hello_developer">Hello Developer!</string>
    <string name="android_development_community">Android Development Community</string>
    <string name="login">Login</string>
    <string name="you_are_not_a_member_register">You are not a member? <b><font fgcolor='#3CDA85'>Register.</font></b></string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="email_hint1">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
</resources>